yaml/pipeline-pod.yml
apiVersion: v1 

kind: Pod 

metadata: 
  name: pipeline-pod
  namespace: jason-space
  labels: 
    app: restapi-pipeline

spec: 
  restartPolicy: Never 
  containers: 
    - name: restapi-pipeline
      image: jmaggart/pipeline
      imagePullPolicy: Always 
      resources:  
        limits:  
          memory: "128Mi"
          cpu: "500m"
