yaml/restapi-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restapi
  namespace: jason-space
  labels:
    app: restapi
spec:
  selector:
    matchLabels:
      app: restapi
  replicas: 3
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: restapi
    spec:
      containers:
      - name: restapi-deployment
        image: jmaggart/restapi
        ports:
        - containerPort: 7070
        imagePullPolicy: Always
