yaml/restapi-postgres.yml
apiVersion: v1
kind: Pod 
metadata:
  name: restapi-postgres-pod 
  labels: 
    app: restapi-postgres 
spec:  
  containers: 
    - name: restapi-postgres-db  
      image: jmaggart/restapi-db 
      ports: 
        - containerPort: 5432 
      volumeMounts: 
        - mountPath: /var/lib/postgresql/data
          name: db-data
  volumes: 
    - name: db-data  
      persistentVolumeClaim:
        claimName: restapi-pvc
