yaml/restapi-ingress.yml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: restapi-ingress
  namespace: jason-space
  annotations: 
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/user-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1 
spec: 
  rules: 
    - http:
        paths: 
        - pathType: Prefix
          path: "/restapi/(.*)"
          backend: 
            service: 
              name: restapi-service
              port: 
                number: 7070
